--- a/vignettes/articles/graficos.Rmd
+++ b/vignettes/articles/graficos.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Visualização dos casos registrados de COVID-19 no Brasil"
 output: rmarkdown::html_vignette
+date: "`r Sys.Date()`"
 vignette: >
   %\VignetteIndexEntry{Visualização dos casos registrados de COVID-19 no Brasil}
   %\VignetteEngine{knitr::rmarkdown}
