--- a/vignettes/articles/lac_es.Rmd
+++ b/vignettes/articles/lac_es.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Visualización de casos registrados de COVID-19 en América Latina y el Caribe"
 output: rmarkdown::html_vignette
+date: "`r Sys.Date()`"
 vignette: >
   %\VignetteIndexEntry{Visualización de casos registrados de COVID-19 en América Latina y el Caribe}
   %\VignetteEngine{knitr::rmarkdown}
